# zero2prod

./: Cargo.toml  Dockerfile-do  spec.yaml
.github/workflows/: general.yml
migrations/: 20210512212521_make_status_not_null_in_subscriptions.sql  20210512212630_create_subscription_tokens_table.sql
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
tests/api/: helpers.rs  subscriptions.rs
